2008-03-05  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs,
	  MonoDevelop.SourceEditor/SourceEditorWidget.cs: Window split now removes
	  the split that doesn't have the focus. (intelligent split)

2008-03-04  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs,
	  gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs,
	  gtk-gui/MonoDevelop.SourceEditor.SearchWidget.cs: Fixed some dialogs for
	  hig compliance.

2008-03-04  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs,
	  gtk-gui/gui.stetic,
	  MonoDevelop.SourceEditor.OptionPanels/BehaviorPanel.cs,
	  MonoDevelop.SourceEditor.OptionPanels/MarkerPanel.cs,
	  MonoDevelop.SourceEditor.OptionPanels/HighlightingPanel.cs,
	  MonoDevelop.SourceEditor.OptionPanels/GeneralOptionsPanel.cs,
	  MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/SourceEditorView.cs,
	  MonoDevelop.SourceEditor/MarkerOperationsHandler.cs: Worked on gnome hig
	  compliant alerts.

2008-03-03  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Improved threading.

2008-03-03  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs,
	  MonoDevelop.SourceEditor/SourceEditorWidget.cs: Added some worker
	  threads.

2008-03-03  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs,
	  MonoDevelop.SourceEditor/SearchWidget.cs: Added code metrics start.

2008-02-29  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/SourceEditorView.cs: Refactored content
	  interfaces

2008-02-29  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/SourceEditorView.cs: Added command for