@@ -71,13 +71,11 @@
 		
 	</Extension>
 	
-	<Extension path = "/MonoDevelop/Ide/OptionsDialogPanels">
-		<DialogPanel id = "TextEditorOptions2" insertafter = "CodingOptions" insertbefore = "ToolsOptions" _label = "Text Editor">
-			<DialogPanel id = "General" _label = "General" class = "MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel"/>
-			<DialogPanel id = "Markers" _label = "Markers and Rulers" class = "MonoDevelop.SourceEditor.OptionPanels.MarkerPanel"/>
-			<DialogPanel id = "Behavior" _label = "Behavior" class = "MonoDevelop.SourceEditor.OptionPanels.BehaviorPanel"/>
-			<DialogPanel id = "SyntaxHighlighting" _label = "Syntax Highlighting" class = "MonoDevelop.SourceEditor.OptionPanels.HighlightingPanel"/>
-		</DialogPanel>
+	<Extension path = "/MonoDevelop/Ide/GlobalOptionsDialog/TextEditor">
+		<Section id = "General" insertbefore="Formatting" _label = "General" icon="md-text-editor" fill="true" class = "MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel"/>
+		<Section id = "Markers" _label = "Markers and Rulers" class = "MonoDevelop.SourceEditor.OptionPanels.MarkerPanel"/>
+		<Section id = "Behavior" _label = "Behavior" class = "MonoDevelop.SourceEditor.OptionPanels.BehaviorPanel"/>
+		<Section id = "SyntaxHighlighting" _label = "Syntax Highlighting" fill="true" class = "MonoDevelop.SourceEditor.OptionPanels.HighlightingPanel"/>
 	</Extension>
 	
 </Addin>
